--- a/asocial.html
+++ b/asocial.html
@@ -275,20 +275,68 @@
     </div>
 
 
+
+  <!--   <div class='container' id="articulos">
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <div class="thumbnail">
+                    <img src="assets\img\Noticias\inauguración_ipsm.JPG" alt="...">
+                    <div class="caption">
+                        <h3>Inauguración de las Oficinas del IPSM</h3>
+                        <p class="text-justify">
+                            El 10 de marzo de 2017, el Instituto de Previsión Social Militar (IPSM) inauguró sus nuevas instalaciones ubicada en el 6to
+                            piso del edificio El Centro 2, con el fin de brindar una mejor atención a los afiliados del fondo
+                            de pensiones militares. Dichas oficinas cuentan con espacios para la atención a los pensionados
+                            y usuarios de los programas sociales que impulse el Instituto. Permite atender en condiciones
+                            de calidad a grupos de empresarios e inversionistas extranjeros que participan en el desarrollo
+                            de los diferentes proyectos que lleva a cabo el IPSM en beneficio de la seguridad social de los
+                            militares y sus familiares. La ceremonia estuvo presidida por el Comandante en Jefe del Ejército
+                            de Nicaragua, General de Ejército Julio César Avilés Castillo, el Jefe del Estado Mayor General,
+                            Mayor General Oscar Mojica Obregón, el Inspector General, Mayor General Adolfo Zepeda Martínez
+                            y miembros de Junta Directiva del IPSM. Participaron oficiales generales y superiores del Consejo
+                            Militar.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">Ver más</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <div class="thumbnail">
+                    <img src="assets\img\Noticias\inauguración_ipsm.JPG" alt="...">
+                    <div class="caption">
+                        <h3>Thumbnail label</h3>
+                        <p>in Category</p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                            mollit anim id est laborum.
+                        </p>
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">Ver más</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
     <div class="site-footer" id="footer">
         <div class="wrap">
             <div class="row">
                 <div class="col-md-8">
-                    <img class="img-responsive hvr-pulse" src="assets/img/logos/ipsm_logo_claro.svg" width="150px" height="100px" id="footer-ipsm-logo">
+                    <img class="img-responsive hvr-pulse" src="assets\img\Logos\ipsm_logo_claro.svg" width="150px" height="100px" id="footer-ipsm-logo">
                     <div class="row" id="info-row">
                         <div class="col-md-3">
-                            <i class="glyphicon glyphicon-map-marker hvr-pulse"></i>
-                            <p>De la Rotonda el Periodista 400 Mts al Norte, Edificio el Centro II, Piso 6 </p>
+                            <i class="fa fa-map-marker hvr-grow" aria-hidden="true"></i>
+                            <p> Edificio El Centro II, 6to Piso, Managua, Nicaragua</p>
                             <br>
                         </div>
                         <div class="col-md-3">
                             <i class="fa fa-phone hvr-pulse"></i>
-                            <p>2298-0180</p>
+                            <p>+(505) 2298-0180</p>
                             <br>
                         </div>
                         <div class="col-md-3">
@@ -313,6 +361,7 @@
             </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -320,6 +369,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets\smooth-scroll-master\dist\js\smooth-scroll.js"></script>
+
+    <script>
+        //var scroll = new SmoothScroll('a[href*="#"]');
+    </script>
 
     <script>
         // When the user scrolls down 20px from the top of the document, show the button
@@ -328,7 +382,7 @@
         };
 
         function scrollFunction() {
-            if (document.body.scrollTop > 150 || document.documentElement.scrollTop > 150) {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
                 document.getElementById("myBtn").style.display = "block";
             } else {
                 document.getElementById("myBtn").style.display = "none";
@@ -337,16 +391,11 @@
 
         // When the user clicks on the button, scroll to the top of the document
         function topFunction() {
-
-            var body = $("body, html");
-            var top = body.scrollTop() // Get position of the body
-            if (top != 0) {
-                body.animate({
-                    scrollTop: 0
-                }, 500, function () {});
-            }
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
         }
     </script>
+
 
 </body>
 
