--- a/noticias.html
+++ b/noticias.html
@@ -14,10 +14,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/user.css">
     <link rel="stylesheet" type="text/css" href="assets/css/hover-min.css">
-
-    <link rel="stylesheet" type="text/css" href="galleria/themes/Azure/galleria.azur.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.3.4/galleria.min.js"></script>
-
 </head>
 
 <body>
@@ -48,21 +44,21 @@
     <div class="container">
         <nav class="navbar navbar-expand-sm">
             <a class="navbar-brand" href="#">
-                <img src="assets\img\Logos\ipsm_logo.svg" class="img-responsive hvr-grow" alt="">
+                <img src="assets\img\Logos\ipsm_logo_final.svg" class="img-responsive hvr-grow" alt="">
             </a>
 
-            <ul class="nav nav-tabs nav-justified ml-md-auto " id="menu-principal" style="width:75%;">
+            <ul class="nav nav-tabs nav-justified ml-md-auto" id="menu-principal" style="width:75%;">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Inicio</a>
                 </li>
-                
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Planes y Programas</a>
 
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="asocial.html">Asistencia Social</a>
                         <a class="dropdown-item" href="fondopen.html">Fondo de Pensiones</a>
-                        <a class="dropdown-item" href="tramite.html">Trámite Guía Oficial</a>                       
+                        <a class="dropdown-item" href="tramite.html">Trámite Guía Oficial</a>
                     </div>
                 </li>
 
@@ -70,11 +66,11 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Institución</a>
 
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="index.html#presentation">Presentación</a>
-                        <a class="dropdown-item" href="index.html#vision">Misión y Visión</a>
-                        <a class="dropdown-item" href="index.html#marco-juridico">Marco y Jurídico</a>
-                        <a class="dropdown-item" href="index.html#junta-directiva">Junta Directiva</a>
-                        <a class="dropdown-item" href="index.html#breve-historia">Historia</a>
+                        <a class="dropdown-item" data-scroll href="index.html#presentation">Presentación</a>
+                        <a class="dropdown-item" data-scroll href="index.html#vision">Misión y Visión</a>
+                        <a class="dropdown-item" data-scroll href="index.html#marco-juridico">Marco Jurídico</a>
+                        <a class="dropdown-item" data-scroll href="index.html#junta-directiva">Junta Directiva</a>
+                        <a class="dropdown-item" data-scroll href="index.html#breve-historia">Historia</a>
                     </div>
                 </li>
 
@@ -84,52 +80,28 @@
 
             </ul>
         </nav>
-    </div>    
-
-
-    <div class="container">
-        <p align="center"><strong><br>
-   <br>
-   REFORMA AL REGLAMENTO ESTATUTARIO</strong>
-        </p>
-        <p>Arto.1.- Se reforman los Artos. 11 y 12 del Decreto N0. 55-95, Reglamento Estatutario del Instituto de Previsi&oacute;n Social Militar, publicado en La Gaceta, Diario Oficial N0. 232 del 11 de Diciembre de 1995, los cuales se leeran as&iacute;:
-        </p>
-        <p>Arto.11.- Composici&oacute;n. La suprema direcci&oacute;n y administraci&oacute;n del Instituto estar&aacute; a cargo de la Junta Directiva, compuesta por siete miembros Propietarios ex oficio que son:
-        </p>
-        <p>&nbsp;&nbsp;&nbsp;a) El Comandante en Jefe del Ej&eacute;rcito
-            <br> &nbsp;&nbsp;&nbsp;b) El Jefe del Estado Mayor General.
-            <br> &nbsp;&nbsp;&nbsp;c) El Inspector General
-            <br> &nbsp;&nbsp;&nbsp;d) El Jefe de la Direcci&oacute;n de Personal y Cuadros
-            <br> &nbsp;&nbsp;&nbsp;e) El Ministro de Defensa
-            <br> &nbsp;&nbsp;&nbsp;f) El Ministro de Finanzas, y
-            <br> &nbsp;&nbsp;&nbsp;g) El Presidente del Instituto Nicaraguense de Seguridad Social (INSS).
-            <br>
-            <br> Habr&aacute; tambi&eacute;n dos miembros suplentes, tambien ex oficio, que ser&aacute;n: El Jefe de la Jefatura Log&iacute;stica y El Jefe de la Secretar&iacute;a General.
-        </p>
-        <p>Arto.12.- Vacantes temporales. Las ausencias o vacantes temporales del Comandante en Jefe del Ej&eacute;rcito, ser&aacute;n llenadas por su sustituto legal.
-        </p>
-        <p>Las ausencias o vacantes temporales de los miembros propietarios referidos en los literales b), c) y d) del Arto 11 del presente Estatuto, ser&aacute;n llenados por cualquiera de los dos miembros suplentes, a llamado del Presidente de la Junta Directiva. Las ausencias o vacantes temporales del Ministro de Defensa, ser&aacute;n llenadas por el vice-ministro de ese ramo. Se considerar&aacute; vacante temporal del Vicepresidente cuando tenga que llenar la vacante temporal del Presidente.
-        </p>
-        <p>Arto.2.- El presente Decreto entrar&aacute; en vigencia a partir de su publicaci&oacute;n en La Gaceta, Diario Oficial.
-        </p>
-        <p>Dado en la ciudad de Managua, Casa Presidencial, el treinta de Marzo de mil novecientos noventa y ocho.
-        </p>
-        <br>
-        <div class="row">
-            <div class="col-md-6">
-                <div style="text-align:center">
-                    <p>Arnoldo Alemán Lacayo</p>
-                    <p>Presidente de la República de Nicaragua</p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div style="text-align:center">
-                    <p>Eduardo Montealegre Rivas</p>
-                    <p>Ministro de la Presidencia</p>
-                </div>
-            </div>
-        </div>
     </div>
+
+    <div class="container" id="news">
+        <h1>
+            <u>Inauguración Oficinas IPSM</u>
+        </h1>
+        <br>
+        <img class="img-fluid" src="assets\img\Noticias\inauguración_ipsm.JPG" alt="Inauguración IPSM">
+        <br>
+        <p>El 10 de marzo de 2017, el Instituto de Previsión Social Militar (IPSM) inauguró sus nuevas instalaciones ubicada en el 6to piso del edificio El Centro 2, con el fin de brindar una mejor atención a los afiliados del fondo de pensiones militares.
+           Dichas oficinas cuentan con espacios para la atención a los pensionados y usuarios de los programas sociales que impulse el Instituto.
+           Permite atender en condiciones de calidad a grupos de empresarios e inversionistas extranjeros que participan en el desarrollo de los diferentes proyectos que lleva a cabo el IPSM en beneficio de la seguridad social de los militares y sus familiares.
+           La ceremonia estuvo presidida por el Comandante en Jefe del Ejército de Nicaragua, General de Ejército Julio César Avilés Castillo, el Jefe del Estado Mayor General, Mayor General Oscar Mojica Obregón, el Inspector General, Mayor General Adolfo Zepeda Martínez y miembros de Junta Directiva del IPSM.
+           Participaron oficiales generales y superiores del Consejo Militar. 
+        </p>
+
+        <br>
+        <br>
+
+        
+    </div>
+
     <div class="site-footer" id="footer">
             <div class="wrap">
                 <div class="row">
